# SSI-Speech-Super-Intelligence

./: .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  get_prompt.py  pyproject.toml  setup.py
.github/workflows/: python-package.yml
experiments/policies/: local-agreement-2.py
experiments/vad/silero/: pyaudio-streaming.ipynb
notebooks/: microphone_client.py  sample_server.py
ssi/: config.py  logger.py
ssi/fastapi/routers/: streaming_ws.py
ssi/types/: new_client_connected.py
ssi/utils/: whisper_language_codes.py
ssi/utils/asr/: asr_factory.py  asr_interface.py  whisper_transformers_asr.py
ssi/utils/buffering_strategy/: buffering_strategy_factory.py  buffering_strategy_interface.py  silence_at_end_of_chunk.py
ssi/utils/vad/: silero_vad.py  vad_factory.py  vad_interface.py
ssi/utils/ws/: connection_manager.py  stream_client.py
training/data/: README.md  data_curation.ipynb  tess_words.txt
training/data/eda/: CREMA-D.ipynb
