[tool.poetry]
name = "ssi"
version = "0.1.0"
description = "This project builds upon Whisper and VAD systems to provide plug and play solutions (FastAPI router) that can be easily included in any AI Assistant type project to have Streaming ASR in their application."
authors = ["Devasheesh Mishra <devasheeshmishra4@gmail.com>", "Mayank Sharma <sharmayank1608@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.1"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
torchaudio = "^2.4.1"
soundfile = "^0.12.1"
pyaudio = "^0.2.14"
jupyterplot = "^0.0.3"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
fastapi = "^0.115.0"
colorlog = "^6.8.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ipykernel = "^6.29.5"
twine = "^5.1.1"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
